# HeadsetControl-GUI

./: .gitignore  README.md  headsetcontrol-gui.desktop  pyproject.toml  run.sh
.github/workflows/: build.yml
headsetcontrol_gui/: __init__.py  __main__.py  backend.py  tray.py  window.py
packaging/: AppRun  build_appimage.sh  headsetcontrol-gui.desktop  launcher.py
